src/app/app.component.scss
.example-container {
    width: auto;
    height: 100vh;
    background-color: white;
    mat-drawer {
      display: flex;
      flex-direction: column;
    }
  }
  
  mat-drawer-content {
    display: flex;
    flex-direction: column;
    align-items: flex-start;
    background-color: white;
    mat-toolbar {
        background-color: white;
        box-shadow: 0px 0px 8px -2px black;
        position: fixed;
        z-index: 1;
    }
    .footer {
      box-shadow: 0px 0px 8px -2px black;
      border-top-style: solid;
      border-top-width: 1px;
      display: flex;
      align-items: center;
      justify-content: center;
      width: 100%;
      height: auto;
  
      .content {
          display: flex;
          align-items: center;
          justify-content: space-between;
          gap: 80px;
          color: black;
          width: auto;
          padding: 2% 30% 2% 30%;
      }
    }
  
    @media (max-width: 700px) {
        .footer {
            padding: 5% 20% 5% 20%;
        
            .content {
                gap:40px;
                flex-wrap: wrap;
            }
        }
    }
  }

